Link algolia logo to algolia.com

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -5,7 +5,7 @@
 
     {% if config.pluginsConfig.algolia.freeAccount %}
     <div class="powered-by-algolia">
-        powered by <img src="{{ "gitbook-plugin-algolia/algolia-logo.jpg"|resolveAsset }}" />
+        powered by <a href="https://algolia.com" target="_blank"><img src="{{ "gitbook-plugin-algolia/algolia-logo.jpg"|resolveAsset }}" /></a>
     </div>
     {% endif %}
 {% endblock %}
